--- a/index.html
+++ b/index.html
@@ -25,4 +25,4 @@ angular.module('weekExample', [])
   <tt>myForm.$valid = {{myForm.$valid}}</tt><br/>
   <tt>myForm.$error.required = {{!!myForm.$error.required}}</tt><br/>
 </form>
-<html/>
+</html>
